--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -102,7 +102,7 @@
     <img
       src="/images/hero.png"
       alt="Xiangyee Hero"
-      class="w-full max-h-[500px] object-cover"
+      class="h-[80vh] max-h-[900px] overflow-hidden"
     />
   </div>
 
