hero banner update

--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -96,13 +96,14 @@
   <!-- Hero -->
   <section id="top" class="bg-white">
     <!-- Image banner -->
-    <div class="w-full h-[80vh] max-h-[900px] overflow-hidden">
-      <img
-        src="/images/hero.png"
-        alt="Xiangyee Hero"
-        class="w-full h-full object-cover"
-      />
-    </div>
+    <div class="w-full h-[70vh] max-h-[800px] overflow-hidden bg-[#e8dfcf] flex items-center justify-center">
+    <img
+      src="/images/hero.png"
+      alt="Xiangyee Hero"
+      class="w-full h-full object-contain"
+    />
+  </div>
+
 
     <!-- Text content below image -->
     <div class="max-w-6xl mx-auto px-4 py-10 md:py-14">
