re-crop hero image

--- a/xiangyee-backend/public/admin.html
+++ b/xiangyee-backend/public/admin.html
@@ -75,7 +75,7 @@
   <div id="toast-container" class="fixed bottom-4 right-4 space-y-2 z-50"></div>
 
 <script>
-  const API_BASE = "https://xiangyee-hunan-cuisine.onrender.com/api";
+  const API_BASE = "/api";
   const ASSET_BASE = location.origin;
 
   let token = localStorage.getItem("xiangyee_token");
