--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -100,18 +100,12 @@
     <img
       src="/images/hero.png"
       alt="Xiangyee Hero"
-      class="w-full h-full object-contain"
+      class="w-full h-full object-cover object-top"
     />
   </div>
 
 
     <!-- Text content below image -->
-    <div class="max-w-6xl mx-auto px-4 py-10 md:py-14">
-      <h1 class="text-4xl md:text-6xl font-black leading-tight">
-        Take materials from the mountains and fields to create
-        <span class="text-red-500">Hunan Flavours</span>
-      </h1>
-
       <p class="mt-5 max-w-2xl text-neutral-600">
         Xiangyee is dedicated to showcasing the rustic flavors of Hunan’s mountain cuisine. Staying true to our roots
         — “gathering from the wild, cooking with heart”
