--- a/xiangyee-backend/public/index.html
+++ b/xiangyee-backend/public/index.html
@@ -96,16 +96,21 @@
   <!-- Hero -->
   <section id="top" class="bg-white">
     <!-- Image banner -->
-    <div class="w-full h-[70vh] max-h-[800px] overflow-hidden bg-[#e8dfcf] flex items-center justify-center">
+    <div class="w-full h-[80vh] max-h-[900px] overflow-hidden">
     <img
       src="/images/hero.png"
       alt="Xiangyee Hero"
-      class="w-full h-full object-cover object-top"
+      class="w-full h-full object-cover translate-y-[-40px]"
     />
   </div>
 
-
     <!-- Text content below image -->
+    <div class="max-w-6xl mx-auto px-4 py-10 md:py-14">
+      <h1 class="text-4xl md:text-6xl font-black leading-tight">
+        Take materials from the mountains and fields to create
+        <span class="text-red-500">Hunan Flavours</span>
+      </h1>
+
       <p class="mt-5 max-w-2xl text-neutral-600">
         Xiangyee is dedicated to showcasing the rustic flavors of Hunan’s mountain cuisine. Staying true to our roots
         — “gathering from the wild, cooking with heart”
