--- a/xiangyee-backend/public/admin.html
+++ b/xiangyee-backend/public/admin.html
@@ -49,6 +49,9 @@
           <button id="tab-res" class="px-3 py-2 rounded-lg text-sm font-semibold bg-neutral-100 hover:bg-neutral-200">
             Reservations
           </button>
+          <button id="tab-menu" class="px-3 py-2 rounded-lg text-sm font-semibold bg-neutral-100 hover:bg-neutral-200">
+            Menu
+          </button>
         </div>
 
         <!-- ORDERS PANEL -->
@@ -65,6 +68,60 @@
             <h2 class="text-xl font-bold">Reservations</h2>
           </div>
           <div id="res-list" class="mt-4 space-y-3"></div>
+        </div>
+
+        <!-- MENU PANEL -->
+        <div id="panel-menu" class="p-6 hidden">
+          <div class="flex items-center justify-between gap-3">
+            <h2 class="text-xl font-bold">Menu Items</h2>
+            <button id="menu-refresh" class="px-3 py-2 rounded-lg border text-sm bg-white hover:bg-neutral-100">
+              Refresh
+            </button>
+          </div>
+
+          <!-- Add Item -->
+          <form id="menu-form" class="mt-4 grid md:grid-cols-6 gap-3 bg-white p-4 rounded-xl border">
+            <input name="name_en" required placeholder="Name (EN)" class="border p-2 rounded md:col-span-2" />
+            <input name="name_cn" required placeholder="Name (CN)" class="border p-2 rounded md:col-span-2" />
+            <input name="price" required type="number" step="0.01" placeholder="Price" class="border p-2 rounded md:col-span-1" />
+            <input name="category" placeholder="Category" class="border p-2 rounded md:col-span-1" />
+            <input name="image_url" placeholder="Image URL" class="border p-2 rounded md:col-span-5" />
+            <label class="flex items-center gap-2 text-sm md:col-span-1">
+              <input type="checkbox" name="is_available" checked />
+              Available
+            </label>
+            <button class="bg-black text-white rounded p-2 font-semibold md:col-span-6">Add Item</button>
+          </form>
+
+          <!-- Filters -->
+          <div class="mt-4 bg-white p-4 rounded-xl border flex flex-col md:flex-row md:items-center gap-3">
+            <div class="flex-1">
+              <input id="menu-search" placeholder="Search by English/Chinese name..."
+                class="border p-2 rounded w-full" />
+            </div>
+
+            <div class="flex gap-2 w-full md:w-auto">
+              <select id="menu-category" class="border p-2 rounded w-full md:w-56">
+                <option value="">All Categories</option>
+              </select>
+
+              <select id="menu-availability" class="border p-2 rounded w-full md:w-40">
+                <option value="all">All</option>
+                <option value="available">Available</option>
+                <option value="unavailable">Unavailable</option>
+              </select>
+            </div>
+
+            <div id="menu-count" class="text-sm text-neutral-600 md:text-right md:w-40">
+              0 items
+            </div>
+          </div>
+
+          <div class="mt-3 text-sm text-neutral-600">
+            Tip: “Remove” will hide it (set unavailable) so old orders don’t break.
+          </div>
+
+          <div id="menu-list" class="mt-4 space-y-3"></div>
         </div>
       </div>
 
@@ -136,47 +193,48 @@
   }
 
   async function login(e) {
-  e.preventDefault();
-  msg.textContent = "";
+    e.preventDefault();
+    msg.textContent = "";
 
-  const form = e.target;
-  const payload = {
-    username: form.username.value.trim(),
-    password: form.password.value.trim()
-  };
+    const form = e.target;
+    const payload = {
+      username: form.username.value.trim(),
+      password: form.password.value.trim()
+    };
 
-  try {
-    const res = await fetch(`${API_BASE}/auth/login`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(payload)
-  });
+    try {
+      const res = await fetch(`${API_BASE}/auth/login`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+      });
 
-    if (!res.ok) {
-      const err = await res.json().catch(() => ({}));
-      msg.textContent = err.error || err.message || "Login failed";
-      return;
+      if (!res.ok) {
+        const err = await res.json().catch(() => ({}));
+        msg.textContent = err.error || err.message || "Login failed";
+        return;
+      }
+
+      const data = await res.json();
+      if (!data.token) {
+        msg.textContent = "Login succeeded but no token returned";
+        return;
+      }
+
+      token = data.token;
+      localStorage.setItem("xiangyee_token", token);
+
+      setAuthedUI(true);
+      loadOrders(true);
+      loadReservations(true);
+      loadMenuAdmin(true);
+      setupAutoRefresh();
+
+    } catch (err) {
+      console.error(err);
+      msg.textContent = "Cannot reach backend";
     }
-
-    const data = await res.json();
-    if (!data.token) {
-      msg.textContent = "Login succeeded but no token returned";
-      return;
-    }
-
-    token = data.token;
-    localStorage.setItem("xiangyee_token", token);
-
-    setAuthedUI(true);
-    loadOrders(true);
-    loadReservations(true);
-    setupAutoRefresh();
-
-  } catch (err) {
-    console.error(err);
-    msg.textContent = "Cannot reach backend";
   }
-}
 
   async function authedFetch(url, opts={}) {
     const res = await fetch(url, {
@@ -230,32 +288,40 @@
   // ====== TABS ======
   const tabOrdersBtn = document.getElementById("tab-orders");
   const tabResBtn    = document.getElementById("tab-res");
+  const tabMenuBtn   = document.getElementById("tab-menu");
+
   const panelOrders  = document.getElementById("panel-orders");
   const panelRes     = document.getElementById("panel-res");
+  const panelMenu    = document.getElementById("panel-menu");
 
-  let activeTab = "orders"; // track current tab
+  let activeTab = "orders";
+
+  function styleTab(btn, active) {
+    btn.classList.toggle("bg-black", active);
+    btn.classList.toggle("text-white", active);
+    btn.classList.toggle("bg-neutral-100", !active);
+    btn.classList.toggle("text-neutral-900", !active);
+  }
 
   function setActiveTab(tab) {
     activeTab = tab;
-    const isOrders = tab === "orders";
 
-    panelOrders.classList.toggle("hidden", !isOrders);
-    panelRes.classList.toggle("hidden", isOrders);
+    panelOrders.classList.toggle("hidden", tab !== "orders");
+    panelRes.classList.toggle("hidden", tab !== "reservations");
+    panelMenu.classList.toggle("hidden", tab !== "menu");
 
-    tabOrdersBtn.classList.toggle("bg-black", isOrders);
-    tabOrdersBtn.classList.toggle("text-white", isOrders);
-    tabOrdersBtn.classList.toggle("bg-neutral-100", !isOrders);
-    tabOrdersBtn.classList.toggle("text-neutral-900", !isOrders);
-
-    tabResBtn.classList.toggle("bg-black", !isOrders);
-    tabResBtn.classList.toggle("text-white", !isOrders);
-    tabResBtn.classList.toggle("bg-neutral-100", isOrders);
-    tabResBtn.classList.toggle("text-neutral-900", isOrders);
+    styleTab(tabOrdersBtn, tab === "orders");
+    styleTab(tabResBtn, tab === "reservations");
+    styleTab(tabMenuBtn, tab === "menu");
   }
 
   setActiveTab("orders");
   tabOrdersBtn.onclick = () => setActiveTab("orders");
   tabResBtn.onclick    = () => setActiveTab("reservations");
+  tabMenuBtn.onclick   = () => {
+    setActiveTab("menu");
+    if (token) loadMenuAdmin(false);
+  };
 
   // ====== ORDERS UI ======
   function orderCard(o) {
@@ -352,11 +418,7 @@
             `🧾 New order(s): ${newOnes.map(o => o.order_no || `#${o.id}`).join(", ")}`,
             "success"
           );
-
-          // ✅ if currently on Reservations tab, auto switch to Orders tab
-          if (activeTab === "reservations") {
-            setActiveTab("orders");
-          }
+          if (activeTab === "reservations") setActiveTab("orders");
         }
       }
 
@@ -452,11 +514,7 @@
               .join(" | ")}`,
             "success"
           );
-
-          // ✅ if currently on Orders tab, auto switch to Reservations tab
-          if (activeTab === "orders") {
-            setActiveTab("reservations");
-          }
+          if (activeTab === "orders") setActiveTab("reservations");
         }
       }
 
@@ -468,6 +526,205 @@
       root.innerHTML = `<div class="text-sm text-red-600">Error loading reservations.</div>`;
     }
   }
+
+  // ====== MENU ADMIN UI (with filters) ======
+  let allMenuItems = [];
+  let menuCategories = [];
+
+  function setMenuCount(n) {
+    const el = document.getElementById("menu-count");
+    if (el) el.textContent = `${n} item${n === 1 ? "" : "s"}`;
+  }
+
+  function buildCategoryDropdown(items) {
+    const select = document.getElementById("menu-category");
+    if (!select) return;
+
+    const cats = Array.from(new Set(items.map(x => x.category).filter(Boolean)))
+      .sort((a,b)=>String(a).localeCompare(String(b)));
+    menuCategories = cats;
+
+    const current = select.value;
+
+    select.innerHTML = `<option value="">All Categories</option>` +
+      cats.map(c => `<option value="${c}">${c}</option>`).join("");
+
+    if (cats.includes(current)) select.value = current;
+  }
+
+  function getMenuFilters() {
+    const q = (document.getElementById("menu-search")?.value || "").trim().toLowerCase();
+    const cat = document.getElementById("menu-category")?.value || "";
+    const avail = document.getElementById("menu-availability")?.value || "all";
+    return { q, cat, avail };
+  }
+
+  function applyMenuFilters(items) {
+    const { q, cat, avail } = getMenuFilters();
+
+    return items.filter(m => {
+      if (cat && m.category !== cat) return false;
+
+      if (avail === "available" && !m.is_available) return false;
+      if (avail === "unavailable" && m.is_available) return false;
+
+      if (q) {
+        const en = String(m.name_en || "").toLowerCase();
+        const cn = String(m.name_cn || "").toLowerCase();
+        if (!en.includes(q) && !cn.includes(q)) return false;
+      }
+      return true;
+    });
+  }
+
+  function menuCard(m) {
+    const div = document.createElement("div");
+    div.className = "p-4 rounded-xl border bg-neutral-50";
+
+    const statusPill = m.is_available
+      ? `<span class="text-green-700 font-semibold">Available</span>`
+      : `<span class="text-red-700 font-semibold">Unavailable</span>`;
+
+    div.innerHTML = `
+      <div class="flex flex-col md:flex-row md:items-start md:justify-between gap-3">
+        <div class="space-y-1">
+          <div class="font-black text-lg">
+            ${m.name_en} <span class="font-semibold text-neutral-500">(${m.name_cn})</span>
+          </div>
+          <div class="text-sm text-neutral-600">
+            ${m.category} • ${money(m.price)} • ${statusPill}
+          </div>
+          ${m.image_url ? `<div class="text-xs text-neutral-500 break-all">Img: ${m.image_url}</div>` : ""}
+        </div>
+
+        <div class="flex gap-2">
+          <button class="toggle px-3 py-2 rounded-lg border text-sm bg-white hover:bg-neutral-100">
+            ${m.is_available ? "Set Unavailable" : "Set Available"}
+          </button>
+          <button class="del px-3 py-2 rounded-lg border text-sm bg-white hover:bg-neutral-100">
+            Remove
+          </button>
+        </div>
+      </div>
+    `;
+
+    div.querySelector(".toggle").onclick = async () => {
+      await authedFetch(`${API_BASE}/menu/admin/${m.id}`, {
+        method: "PUT",
+        headers: {"Content-Type":"application/json"},
+        body: JSON.stringify({ is_available: !m.is_available })
+      });
+      showToast("Menu item updated", "success");
+      loadMenuAdmin(true);
+    };
+
+    div.querySelector(".del").onclick = async () => {
+      if (!confirm(`Remove "${m.name_en}"? (This will hide it)`)) return;
+      await authedFetch(`${API_BASE}/menu/admin/${m.id}`, { method: "DELETE" });
+      showToast("Menu item removed", "success");
+      loadMenuAdmin(true);
+    };
+
+    return div;
+  }
+
+  function renderMenuList(items) {
+    const root = document.getElementById("menu-list");
+    if (!root) return;
+
+    root.innerHTML = "";
+    if (!items.length) {
+      root.innerHTML = `<div class="text-sm text-neutral-500">No matching menu items.</div>`;
+      setMenuCount(0);
+      return;
+    }
+
+    items.forEach(m => root.appendChild(menuCard(m)));
+    setMenuCount(items.length);
+  }
+
+  function refreshMenuView() {
+    const sorted = [...allMenuItems].sort((a,b) => {
+      const c = String(a.category || "").localeCompare(String(b.category || ""));
+      if (c !== 0) return c;
+      return String(a.name_en || "").localeCompare(String(b.name_en || ""));
+    });
+
+    buildCategoryDropdown(sorted);
+    const filtered = applyMenuFilters(sorted);
+    renderMenuList(filtered);
+  }
+
+  async function loadMenuAdmin(initial=false) {
+    const root = document.getElementById("menu-list");
+    if (initial && root) root.innerHTML = `<div class="text-sm text-neutral-500">Loading...</div>`;
+
+    try {
+      const res = await authedFetch(`${API_BASE}/menu/admin`);
+      if (!res.ok) {
+        const err = await res.json().catch(() => ({}));
+        throw new Error(err.message || err.error || "Failed to load menu");
+      }
+
+      allMenuItems = await res.json();
+      refreshMenuView();
+    } catch (err) {
+      console.error(err);
+      if (root) root.innerHTML = `<div class="text-sm text-red-600">Error loading menu: ${err.message}</div>`;
+    }
+  }
+
+  // ====== MENU EVENTS (safe-guarded) ======
+  const menuForm = document.getElementById("menu-form");
+  if (menuForm) {
+    menuForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const f = e.target;
+
+      const payload = {
+        name_en: f.name_en.value.trim(),
+        name_cn: f.name_cn.value.trim(),
+        price: Number(f.price.value),
+        category: (f.category.value || "Main Dishes").trim(),
+        image_url: (f.image_url.value || "").trim() || null,
+        is_available: !!f.is_available.checked
+      };
+
+      try {
+        const res = await authedFetch(`${API_BASE}/menu/admin`, {
+          method: "POST",
+          headers: {"Content-Type":"application/json"},
+          body: JSON.stringify(payload)
+        });
+
+        if (!res.ok) {
+          const err = await res.json().catch(() => ({}));
+          showToast(err.error || err.message || "Failed to add item", "error");
+          return;
+        }
+
+        f.reset();
+        f.is_available.checked = true;
+        showToast("Menu item added", "success");
+        loadMenuAdmin(true);
+      } catch (err) {
+        console.error(err);
+        showToast("Error adding item", "error");
+      }
+    });
+  }
+
+  const menuRefreshBtn = document.getElementById("menu-refresh");
+  if (menuRefreshBtn) menuRefreshBtn.onclick = () => loadMenuAdmin(true);
+
+  const menuSearch = document.getElementById("menu-search");
+  if (menuSearch) menuSearch.addEventListener("input", () => refreshMenuView());
+
+  const menuCategory = document.getElementById("menu-category");
+  if (menuCategory) menuCategory.addEventListener("change", () => refreshMenuView());
+
+  const menuAvail = document.getElementById("menu-availability");
+  if (menuAvail) menuAvail.addEventListener("change", () => refreshMenuView());
 
   // ====== AUTO REFRESH ======
   function setupAutoRefresh() {
@@ -498,6 +755,7 @@
     setAuthedUI(true);
     loadOrders(true);
     loadReservations(true);
+    loadMenuAdmin(true);
     setupAutoRefresh();
   } else {
     setAuthedUI(false);
