remove loadMenuAdmin false

--- a/xiangyee-backend/public/admin.html
+++ b/xiangyee-backend/public/admin.html
@@ -320,7 +320,7 @@
   tabResBtn.onclick    = () => setActiveTab("reservations");
   tabMenuBtn.onclick   = () => {
     setActiveTab("menu");
-    if (token) loadMenuAdmin(false);
+    // if (token) loadMenuAdmin(false);
   };
 
   // ====== ORDERS UI ======
