hide remove button

--- a/xiangyee-backend/public/admin.html
+++ b/xiangyee-backend/public/admin.html
@@ -108,7 +108,7 @@
             <div id="menu-count" class="text-sm text-neutral-600 md:text-right md:w-40">0 items</div>
           </div>
 
-          <div class="mt-3 text-sm text-neutral-600">
+          <div class="hidden mt-3 text-sm text-neutral-600">
             Tip: “Remove” will hide it (set unavailable) so old orders don’t break.
           </div>
 
@@ -692,7 +692,7 @@
             ${m.is_available ? "Set Unavailable" : "Set Available"}
           </button>
 
-          <button class="del px-3 py-2 rounded-lg border text-sm bg-white hover:bg-neutral-100">
+          <button class="del hidden px-3 py-2 rounded-lg border text-sm bg-white hover:bg-neutral-100">
             Remove
           </button>
         </div>
